--- a/src/docs/asciidoc/api-virtual-network-v1.adoc
+++ b/src/docs/asciidoc/api-virtual-network-v1.adoc
@@ -1,3 +1,5 @@
 include::{generated}/overview.adoc[]
+include::readme.adoc[]
 include::{generated}/paths.adoc[]
 include::{generated}/definitions.adoc[]
+include::misc.adoc[]
